--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:wght@700&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -11,6 +11,6 @@
 
 @layer base {
   html {
-    font-family: 'Satify', sans-serif;
+    font-family: 'Prata', serif;
   }
 }
